--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,108 @@
-body, html {
-    height: 100%;
-    margin: 0;
-  }
-  h1 {
-    text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
-  }
-body {
-    font-family: "Arial", sans-serif;
+body{
+  background: #3A1C71;  
+background: -webkit-linear-gradient(to left, #FFAF7B, #D76D77, #3A1C71); 
+background: linear-gradient(to left, #FFAF7B, #D76D77, #3A1C71); 
+  color:#fffff8;
+  font-size:40px;
+  font-family: 'Roboto', sans-serif;
 }
-section {
-    text-align: center;
+h2{
+  text-align: center;
 }
-.bg {
-    background-image: url("pic.jpg");
-    height: 90%; 
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  div.transbox {
-    margin: 150px;
-    background-color: #ffffff;
-    border: 1px solid black;
-    opacity: 0.6;
-  }
-  
-  div.transbox p {
-    margin: 50%;
-    font-weight: bold;
-    color: #000000;
-  }
+td {
+  background-color:white;
+  border-radius:25%;
+  opacity:.2;
+  width:50px;
+  height:50px;
+  text-align:center;
+  font-family: 'Roboto', sans-serif;
+  color:white;
+  border: 5px solid #070000;
+}
 
-.game--container {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    width: 306px;
-    margin: 50px auto;
+.text{
+    color: white;
+    opacity: 1;
+    background-color: transparent;
+    border: none; 
 }
-.cell {
-    font-family: "Permanent Marker", cursive;
-    width: 100px;
-    height: 100px;
-    box-shadow: 0 0 0 1px #333333;
-    border: 1px solid #333333;
-    cursor: pointer;
-    line-height: 100px;
-    font-size: 60px;
+
+td:hover{
+  opacity:0.4;
+}
+
+.content{
+ position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display:block;
+}
+
+table{
+  width:300px;
+  height:300px;
+}
+
+.table_overlay{
+  position:absolute;
+    top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+    width:300px;
+  height:300px;
+}
+
+.modal {
+    display:none;
+    position: fixed; 
+    z-index: 1;
+    left: 0;
+    top: 0;
+  
+    width: 100%;
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+}
+
+
+.modal-content {
+  background-color: #070707;
+  margin: 10% auto; 
+  padding: 0px;
+  border-radius:10px;
+  width: 400px;
+  height:200px;
+  font-size:17px;
+  text-align:center;
+  font-family:'Montserrat', sans-serif;;
+}
+
+.modal-header {
+  padding: 2px;
+  border-radius:10px 10px 0 0;
+}
+
+.modal-body{
+  top: -10px;
+  position: relative;
+}
+
+btn{
+  position: relative;
+  top: 10px;
+  border-radius:7px;
+  padding:10px;
+  margin-top:10px;
+  color:white;
+  background-color:#EF798A;
+  cursor:pointer;
+}
+
+btn:hover{
+  background-color:#CC4C5E;
 }
